Finnished random CNN trainings

--- a/TPE.ipynb
+++ b/TPE.ipynb
@@ -155,6 +155,8 @@
     "     # Create a Sequential model\n",
     "    model = models.Sequential()\n",
     "\n",
+    "    model.add(layers.Flatten(input_shape=(28, 28)))\n",
+    "\n",
     "    # Add fully connected layers\n",
     "    model.add(layers.Dense(hidden_layer1, activation='relu'))\n",
     "    model.add(layers.Dense(hidden_layer2, activation='relu'))\n",
