--- a/lossResults.ipynb
+++ b/lossResults.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,81 +14,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
-    "samplingMethod='LHS'\n",
-    "modelMLP='CNN'\n",
-    "totalLoss = []"
+    "def getResults(modelMLP,samplingMethod):\n",
+    "    totalLoss = []\n",
+    "    for datasetNumber in range(1,21):\n",
+    "        trainingFile = 'trainings/'+modelMLP+'_'+samplingMethod+'/training_'+str(datasetNumber)+'.csv'\n",
+    "        dataset = pd.read_csv(trainingFile)\n",
+    "        totalLoss.append(dataset['Loss'].values)\n",
+    "        alllosses = np.concatenate(totalLoss)\n",
+    "        meanLosses = np.mean(alllosses)\n",
+    "        stdLosses = np.std(alllosses)\n",
+    "        return meanLosses, stdLosses, alllosses"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "meanLosses, stdLosses, allLossesLHS = getResults('CNN','LHS')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "'numpy.ndarray' object has no attribute 'values'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32md:\\Projetos\\PesquisaArtigo\\TCC_Hyperparameters Optimization\\lossResults.ipynb Cell 3\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Projetos/PesquisaArtigo/TCC_Hyperparameters%20Optimization/lossResults.ipynb#X34sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m dataset \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mread_csv(trainingFile)\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Projetos/PesquisaArtigo/TCC_Hyperparameters%20Optimization/lossResults.ipynb#X34sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m loss \u001b[39m=\u001b[39m dataset[\u001b[39m'\u001b[39m\u001b[39mLoss\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mvalues\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Projetos/PesquisaArtigo/TCC_Hyperparameters%20Optimization/lossResults.ipynb#X34sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m totalLoss\u001b[39m.\u001b[39mappend(loss\u001b[39m.\u001b[39;49mvalues)\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'values'"
-     ]
+     "data": {
+      "text/plain": [
+       "0.4134938070308417"
+      ]
+     },
+     "execution_count": 119,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for datasetNumber in range(1,21):\n",
-    "    trainingFile = 'trainings/'+modelMLP+'_'+samplingMethod+'/training_'+str(datasetNumber)+'.csv'\n",
-    "    dataset = pd.read_csv(trainingFile)\n",
-    "    loss = dataset['Loss'].values\n",
-    "    totalLoss.append(loss.values)"
+    "meanLosses"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "alllosses = np.concatenate(totalLoss)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "0.42118925944585356\n"
-     ]
+     "data": {
+      "text/plain": [
+       "0.6020565086311358"
+      ]
+     },
+     "execution_count": 120,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "print(np.mean(alllosses))\n",
-    "print(np.std(alllosses))"
+    "stdLosses"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create(file_path, trainings):\n",
-    "    if not os.path.exists(file_path):\n",
-    "        with open(file_path, 'w', newline='') as file:\n",
-    "            writer = csv.writer(file)\n",
-    "            writer.writerow([\"Name\", \"Convoluted_Layers1\", \"Convoluted_Filters1\", \"Convoluted_Layers2\", \"Convoluted_Filters2\", \"Hidden_Layer1\", \"Hidden_Layer2\", \"Learning_Rate\", \"Batch_Size\", \"Loss\"])\n",
-    "            for i in range(trainings):\n",
-    "                writer.writerow(['Dummy'])\n",
-    "            file.close()"
+    "meanLosses, stdLosses, allLossesRandom = getResults('CNN','random')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.40754744958691297"
+      ]
+     },
+     "execution_count": 122,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "meanLosses"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5909717646098968"
+      ]
+     },
+     "execution_count": 123,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "stdLosses"
    ]
   },
   {
@@ -97,87 +134,46 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "allLoss = []\n",
-    "eachMean = []\n",
-    "eachStd = []"
+    "meanLosses, stdLosses, allLossesGrid = getResults('CNN','random')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.40754744958691297"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "for datasetNumber in range(1,21):\n",
-    "    Loss = []\n",
-    "    trainingFile = 'trainings/'+modelMLP+'_'+samplingMethod+'/training_'+str(datasetNumber)+'.csv'\n",
-    "    data = pd.read_csv(trainingFile)\n",
-    "    individualLossFile = 'losses/'+modelMLP+'_'+samplingMetho+'/training_'+str(datasetNumber)+'.csv'\n",
-    "    Loss.append(data['Loss'])\n",
-    "    allLoss.append(data['Loss'])\n",
-    "    eachMean.append(np.mean(Loss))\n",
-    "    eachStd.append(np.std(Loss))\n",
-    "        # Create a CSV file if it doesn't exist to store the results\n",
-    "    if not os.path.exists(individualLossFile):\n",
-    "        with open(individualLossFile, 'w', newline='') as file:\n",
-    "            writer = csv.writer(file)\n",
-    "            writer.writerow([\"Loss\"])\n",
-    "            file.close()\n",
-    "\n",
-    "    with open(individualLossFile, 'w', newline='') as csvfile:\n",
-    "        writer = csv.writer(csvfile)\n",
-    "        for element in Loss:\n",
-    "            writer.writerow([element])\n",
-    "        file.close()"
+    "meanLosses"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.5909717646098968"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "allLossFile = 'losses/'+modelMLP+'_'+samplingMetho+'/training_'+str(datasetNumber)+'.csv'\n",
-    "allMean =\n",
-    "allStd =\n",
-    "# Create a CSV file if it doesn't exist to store the results\n",
-    "if not os.path.exists(trainingFile):\n",
-    "    with open(trainingFile, 'w', newline='') as file:\n",
-    "        writer = csv.writer(file)\n",
-    "        writer.writerow([\"Loss\"])\n",
-    "        file.close()\n",
-    "\n",
-    "with open(trainingFile, 'r', newline='') as file:\n",
-    "    csv_reader = csv.reader(file)\n",
-    "    line = sum(1 for row in csv_reader)\n",
-    "    file.close()"
+    "stdLosses"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "    # Create a CSV file if it doesn't exist to store the results\n",
-    "    if not os.path.exists(trainingFile):\n",
-    "        with open(trainingFile, 'w', newline='') as file:\n",
-    "               writer = csv.writer(file)\n",
-    "               writer.writerow([\"Optimizer\",\"Hidden_Layer1\", \"Hidden_Layer2\", \"Learning_Rate\",\"Batch_Size\",\"Loss\"])\n",
-    "               file.close()\n",
-    "\n",
-    "    with open(trainingFile, 'r', newline='') as file:\n",
-    "        csv_reader = csv.reader(file)\n",
-    "        line = sum(1 for row in csv_reader)\n",
-    "        file.close()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
