--- a/lossResults.ipynb
+++ b/lossResults.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,14 +14,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def getResults(modelMLP,samplingMethod,PSO=False,num_particles=False):\n",
     "    alllosses = []\n",
-    "    #if PSO == False:\n",
-    "    #    Files\n",
     "    for datasetNumber in range(1,21):\n",
     "        if modelMLP == 'MLP':\n",
     "            if PSO == False:\n",
@@ -34,9 +32,8 @@
     "            else:\n",
     "                trainingFile = 'trainings/'+modelMLP+'_'+samplingMethod+'/GRPSO_'+str(num_particles)+'.csv'\n",
     "        dataset = pd.read_csv(trainingFile)\n",
-    "        onlyLoss = dt['Loss']\n",
+    "        onlyLoss = dataset['Loss']\n",
     "        alllosses.append(onlyLoss[np.argmin(onlyLoss)])\n",
-    "        #print(alllosses)\n",
     "    meanLosses = np.mean(alllosses)\n",
     "    stdLosses = np.std(alllosses)\n",
     "    varLosses = np.var(alllosses)\n",
@@ -136,9 +133,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Média: 0.05989130102097984\n",
+      "Desvio Padrão: 0.001303328860397604\n",
+      "Variância: 1.6986661183453168e-06\n"
+     ]
+    }
+   ],
    "source": [
     "meanLosses, stdLosses, varLosses, allLossesRandom = getResults('MLP','random')\n",
     "\n",
@@ -161,9 +168,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Média: 0.4280711688399315\n",
-      "Desvio Padrão: 0.6149266534786038\n",
-      "Variância: 0.3781347891583948\n"
+      "Média: 0.02686797352507706\n",
+      "Desvio Padrão: 0.00151904815692949\n",
+      "Variância: 2.307507303070881e-06\n"
      ]
     }
    ],
@@ -182,16 +189,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Média: 0.027836581692099495\n",
-      "Desvio Padrão: 3.469446951953614e-18\n",
-      "Variância: 1.2037062152420224e-35\n"
+      "Média: 0.05963626615703101\n",
+      "Desvio Padrão: 0.00118568893391583\n",
+      "Variância: 1.4058582480104574e-06\n"
      ]
     }
    ],
